--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,6 +87,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Down)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
