--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,4 +42,5 @@ ManualIPAddress=
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.AutoExposure=False
+r.AntiAliasingMethod=1
 
