added a lot of sounds and animations?

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,12 +3,12 @@ LocalMap=/Game/Example_Map
 GameName=FinalProject
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+EditorStartupMap=/Game/MainMenuMAP.MainMenuMAP
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+GameDefaultMap=/Game/MainMenuMAP.MainMenuMAP
 GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/BP_SideScrollerGameMode.BP_SideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
